--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = sumo
 description = Sumo subgame
-depends = arena_lib, controls, lib_chatcmdbuilder
+depends = default, arena_lib, lib_chatcmdbuilder
